[package]
name = "gctx"
version = "0.1.0"
authors = ["Adam Rodger <adam.rodger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.0"
glob = "0.3.0"
clap = "3.0.0-beta.1"
anyhow = "1.0.31"
thiserror = "1.0.20"
