[package]
name = "gcloud-ctx"
version = "0.1.0"
authors = ["Adam Rodger <adam.rodger@gmail.com>"]
edition = "2018"
description = "A gcloud configuration manager"
readme = "./README.md"
homepage = "https://github.com/adamrodger/gcloud-ctx"
repository = "https://github.com/adamrodger/gcloud-ctx"
license = "MIT"
keywords = ["gcloud", "gctx", "gcloud-ctx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gctx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.31"
clap = "3.0.0-beta.1"
dirs = "3.0.0"
lazy_static = "1.4.0"
regex = "1"
rust-ini = "0.15"
thiserror = "1.0.20"
