[package]
name = "gctx"
version = "0.7.0"
authors = ["Adam Rodger <crates@adamrodger.com>"]
edition = "2021"
description = "A gcloud configuration management utility"
readme = "../README.md"
homepage = "https://github.com/adamrodger/gcloud-ctx"
repository = "https://github.com/adamrodger/gcloud-ctx"
license = "MIT"
keywords = ["gcloud", "gctx", "gcloud-ctx", "google", "gcp"]
categories = ["command-line-utilities", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive"] }
colored = "3"
dialoguer = "0.12"
gcloud-ctx = { path = "../gcloud-ctx", version = "0.4" }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
